# wee_prophet

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/src/: __main__.py  app.py  config.py  db.py  logs.py  main.py  schemas.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/Components/: EditableTable.js  Header.js  RegistrationForm.js
frontend/src/Pages/: login.js  logout.js  profile.js
